# py-dedup

./: .gitignore  README.md  pyproject.toml
ai-context/: development-plan.md
src/py_dedup/: __init__.py  deduplicator.py  exceptions.py  hasher.py
src/py_dedup/cache/: __init__.py  base.py  memory.py
tests/: test_basic.py
